--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap");
+
 :root {
   --body-bg-color: #f9f9f9;
 }
@@ -6,7 +8,11 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--body-bg-color);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  /* font-family: 'rotunda-variable', sans-serif; */
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
 }
 
 * {
